--- a/new-project/src/App.css
+++ b/new-project/src/App.css
@@ -100,3 +100,17 @@ button {
   background: #247BA0;
   color: #fff;
 }
+
+.gm-style-iw.gm-style-iw-c {
+  background-color: rgb(71 85 105 );
+}
+
+.gm-style .gm-style-iw-d::-webkit-scrollbar-track, 
+.gm-style .gm-style-iw-d::-webkit-scrollbar-track-piece,
+.gm-style .gm-style-iw-c,
+.gm-style .gm-style-iw-t::after { 
+  background: rgb(71 85 105 );
+}
+
+
+
